updated supported OS

--- a/doc-V2V_Guide/cfme/doc/modules/ref_Discovery_questions.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/ref_Discovery_questions.adoc
@@ -10,12 +10,12 @@ What is the maximum number of resources that I can migrate?::
 There is no maximum number of disks or virtual machines that you can migrate. However, you may not want to migrate all your virtual machines at the same time, in order to minimize the impact on your users. The maximum number of NICs that you can migrate is 4.
 
 What operating systems can I migrate?::
-The following operating systems are currently supported:
-
-* Red Hat Enterprise Linux 3.9, 4, 5, 6, 7.1 and later
-* Windows 7, 8, 8.1, and 10
-* Windows Server 2008, 2008 R2, 2012, 2012 R2, and 2016
-* SUSE Linux Enterprise Server 10, 11, and 12
+For a list of supported guest operating systems, see link:https://access.redhat.com/articles/1351473[Converting Virtual Machines from Other Hypervisors to KVM with virt-v2v in RHEL 7]. For a list of certified guest operating systems, see link:https://access.redhat.com/articles/973163[Certified Guest Operating Systems in Red Hat OpenStack Platform and Red Hat Enterprise Virtualization].
++
+[NOTE]
+====
+Although it is possible to migrate guest operating systems that are not certified for RHV, running the guest is "best effort".
+====
 
 What resources will my target environment require?::
 Your target environment must be large enough to hold the migrated virtual machines, in addition to the original VMware virtual machines. The VMware virtual machines are not affected by the migration process. Their power state after the migration will be the same as before.
