Updated result with more detail
Backporting from RHV docs bug BZ#1595103-rhv-new

--- a/common/configuration-db.adoc
+++ b/common/configuration-db.adoc
@@ -51,4 +51,5 @@ Creating a new region destroys any existing data on the chosen database.
 +
 .  Create and confirm a password for the database.
 
-{product-title} then configures the internal database.
+{product-title} then configures the internal database. This takes a few minutes. After the database is created and initialized, you can log in to {product-title_short}.
+
