--- a/doc-Managing_Authentication/topics/External_auth.adoc
+++ b/doc-Managing_Authentication/topics/External_auth.adoc
@@ -1,25 +1,26 @@
 [[external_auth]]
-= Configuring Federated Identity Management (External Authentication) with {product-title_short}
+= Configuring Identity Management (External Authentication) with {product-title_short}
 
-//Overview of federated auth in CloudForms here - benefits
 
-You can configure {product-title_short} to use federation authentication with system authentication methods such as Red Hat Identity Management (IdM), Red Hat Single Sign-On (SSO), or Active Directory (AD). 
+You can configure {product-title_short} to use federation authentication with system authentication methods such as Red Hat Identity Management (IdM) or IPA, Red Hat Single Sign-On (SSO), or Active Directory (AD). 
+
+This method uses `apache` (`httpd`) modules with web browsers to control authentication to {product-title_short}. It is the recommended authentication method to connect {product-title_short} with most identity management services.
 
 [[external_ipa_auth]]
-== Configuring Federated Authentication with IdM 
+== Configuring Federated Authentication with IPA 
 
-You can configure {product-title_short} to use Red Hat Identity Management (IdM) for federated authentication using the *External Authentication (httpd)* option in {product-title_short}.
+You can configure {product-title_short} to use IPA for federated authentication using the *External Authentication (httpd)* option in {product-title_short}.
 
-When external authentication is enabled, users can log in to the {product-title_short} appliance using their IdM server credentials. The appliance creates user accounts automatically and imports relevant information from the IdM server.
+When external authentication is enabled, users can log in to the {product-title_short} appliance using their IPA server credentials. The appliance creates user accounts automatically and imports relevant information from the IPA server.
 
-The appliance contains IdM client software for connecting to IdM servers, but it is not configured by default. External authentication is enabled by first configuring it in the web interface, then in the console.
+The appliance contains ipa client software for connecting to IPA servers, but it is not configured by default. External authentication is enabled by first configuring it in the web interface, then in the console.
 Disabling external authentication and returning to internal database authentication also requires steps in both the web interface and the console.
 
 === External Authentication Requirements
 
-* For an appliance to leverage an IdM server on the network, both the appliance and the IdM server must have their clocks synchronized or Kerberos and LDAP authentication fail.
-* The IdM server must be known by DNS and accessible by name. If DNS is not configured accordingly, the hosts files need to be updated to reflect both IdM server and the appliance on both virtual machines.
-* For users to log in to the appliance using IdM server credentials, they must be members of at least one group on the IdM server which is also defined in the appliance. Navigate to the settings menu, then menu:Configuration[Access Control > Groups] to administer groups.
+* For an appliance to leverage an IPA server on the network, both the appliance and the IPA server must have their clocks synchronized or Kerberos and LDAP authentication fail.
+* The IPA server must be known by DNS and accessible by name. If DNS is not configured accordingly, the hosts files need to be updated to reflect both IPA server and the appliance on both virtual machines.
+* For users to log in to the appliance using IPA server credentials, they must be members of at least one group on the IPA server which is also defined in the appliance. Navigate to the settings menu, then menu:Configuration[Access Control > Groups] to administer groups.
 
 === Configuring the Appliance for External Authentication
 
@@ -34,7 +35,7 @@ Using the web interface:
 . Select the *Authentication* tab.
 . Select a *Session Timeout* if required.
 . Select *External (httpd)* in the *Mode list*.
-. Select *Enable Single Sign-On* to allow single sign-on using Kerberos tickets from client machines that authenticate to the same IdM server as the appliance.
+. Select *Enable Single Sign-On* to allow single sign-on using Kerberos tickets from client machines that authenticate to the same IPA server as the appliance.
 . In the *Role Settings* area, select *Get User Groups* from *External Authentication (https)*.
 . Click *Save*.
 
@@ -49,21 +50,21 @@ External Auth:  not configured
 +
 . Press Enter.
 . Select *Configure External Authentication (httpd)*.
-. Enter the fully qualified hostname of the IdM server, for example _idmserver.test.company.com_.
-. Enter the IdM server domain, for example _test.company.com_.
-. Enter the IdM server realm, for example _TEST.COMPANY.COM_.
-. Enter the IdM server principal, for example _admin_.
-. Enter the password of the IdM server principal.
+. Enter the fully qualified hostname of the IPA server, for example _ipaserver.test.company.com_.
+. Enter the IPA server domain, for example _test.company.com_.
+. Enter the IPA server realm, for example _TEST.COMPANY.COM_.
+. Enter the IPA server principal, for example _admin_.
+. Enter the password of the IPA server principal.
 . Enter `y` to proceed.
 
 [NOTE]
 ====
 If any of the following conditions are true, configuration fails:
 
-* The IdM server is not reachable by its FQDN
-* The IdM server cannot reach the appliance by its FQDN
-* The time is not synchronized between the appliance and the IdM server
-* The IdM server admin password is entered incorrectly
+* The IPA server is not reachable by its FQDN
+* The IPA server cannot reach the appliance by its FQDN
+* The time is not synchronized between the appliance and the IPA server
+* The IPA server admin password is entered incorrectly
 ====
 
 .Configuring External Authentication
@@ -71,7 +72,7 @@ If any of the following conditions are true, configuration fails:
 ----
 $ ssh root@appliance.test.company.com
 [appliance]# /bin/appliance_console_cli --host appliance.test.company.com \
-                                      --ipaserver idmserver.test.company.com \
+                                      --ipaserver ipaserver.test.company.com \
                                       --iparealm TEST.COMPANY.COM \
                                       --ipaprincipal admin \
                                       --ipapassword smartvm1
@@ -101,8 +102,8 @@ External Auth:  Id.server.FQDN
 ----
 +
 . Press `Enter`.
-. Select *Configure External Authentication (httpd)*. The currently configured IdM server hostname and domain are displayed.
-. Enter `y` to remove configuration details for the IdM client.
+. Select *Configure External Authentication (httpd)*. The currently configured IPA server hostname and domain are displayed.
+. Enter `y` to remove configuration details for the IPA client.
 
 
 .Reverting to Internal Database Authentication
@@ -121,10 +122,10 @@ Appliance console CLI command and relevant options include:
 
 ----
 /bin/appliance_console_cli --host <appliance_fqdn>
-                           --ipaserver <idm_server_fqdn>
-                           --iparealm <realm_of_idm_server>
-                           --ipaprincipal <idm_server_principal>
-                           --ipapassword <idm_server_password>
+                           --ipaserver <ipa_server_fqdn>
+                           --iparealm <realm_of_ipa_server>
+                           --ipaprincipal <ipa_server_principal>
+                           --ipapassword <ipa_server_password>
                            --uninstall-ipa4.5
 ----
 
