--- a/doc-Managing_Authentication/topics/LDAP.adoc
+++ b/doc-Managing_Authentication/topics/LDAP.adoc
@@ -3,16 +3,15 @@
 
 Select *LDAP* or *LDAPS* to configure {product-title_short} authentication using Red Hat Identity Management (IdM), Active Directory, or another identity management service that uses LDAP protocol.
 
-[NOTE]
-====
-For more information about Red Hat Identity Management, see the https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/linux_domain_identity_authentication_and_policy_guide/index[Linux Domain Identity, Authentication, and Policy Guide] and related Red Hat Enterprise Linux documentation.
-====
-
 If you choose LDAP or LDAPS as your authentication mode, the required parameters are exposed under *LDAP Settings*. Be sure to validate your settings before saving them.
 
-This procedure requires a pre-configured authentication system such as Red Hat Identity Management (IdM).
+[IMPORTANT]
+====
+This procedure requires a pre-configured authentication system such as Red Hat Identity Management (IdM) or Active Directory (AD) with user groups configured.
+====
 
-//is a user with special privileges also required?
+
+For more information about Red Hat Identity Management, see the https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/linux_domain_identity_authentication_and_policy_guide/index[Linux Domain Identity, Authentication, and Policy Guide] and related Red Hat Enterprise Linux documentation.
 
 [[ldap_config]]
 == Configuring LDAP or LDAPS Authentication 
@@ -24,10 +23,10 @@ To configure {product-title_short} to use LDAP for authentication:
 . Select the *Authentication* tab.
 . Select a *Session Timeout* to set the period of inactivity before a user is logged out of the console.
 . Select *LDAP* or *LDAPS* from the *Mode* list. This exposes additional required parameters under *LDAP Settings*.
-. Configure your *LDAP Settings* (the following example configures an IdM LDAP server):
-* Use *LDAP Host Names* to specify the fully qualified domain names of your LDAP servers. {product-title_short} will search each host name in order until it finds one that authenticates the user. Note, {product-title_short} supports using a maximum of three possible *LDAP Host Names*.
-* Use *LDAP Port* to specify the port for your LDAP server. The default is 389 for LDAP and 636 for LDAPS.
-* From the *User Type* list, select one of the following and configure the values for your LDAP server:
+. Configure your *LDAP Settings* (the following example configures an IdM directory server):
+* Use *LDAP Host Names* to specify the fully qualified domain names of your directory servers. {product-title_short} will search each host name in order until it finds one that authenticates the user. Note, {product-title_short} supports using a maximum of three possible *LDAP Host Names*.
+* Use *LDAP Port* to specify the port for your directory server. The default is 389 for LDAP and 636 for LDAPS.
+* From the *User Type* list, select one of the following and configure the values for your directory server:
 ** *User Principal Name*: Type the user name in the format of _user@domainname_, for example, _dbright@acme.com_. (In this case, the user would log on as _dbright_.)
 ** *Email Address*: Logs in with the user's email address.
 ** *Distinguished Name* (CN=<user>): Uses the common name for the user. Be sure to enter the correct *User Suffix* and *Distinguished Name* option for your directory service implementation: for example, _cn=dan bright,ou=users,dc=acme,dc=com_. (The user logs on as _dan bright_.)
@@ -42,7 +41,7 @@ The `ldapsearch(1)` command can be used to get details of your LDAP settings. To
 
   # ldapsearch -D "cn=directory manager" -H ldap://www.acme.com:389 -b "dc=acme,dc=com" -s sub "(objectclass=*)" -w password | grep -i dbright
 
-To search for your LDAP server's distinguished name (DN) values, run:
+To search for your directory server's distinguished name (DN) values, run:
 
   # ldapsearch -D "cn=directory manager" -H ldap://www.acme.com:389 -b "dc=acme,dc=com" -s sub "(objectclass=*)" -w password
 ====
@@ -55,15 +54,21 @@ In both LDAP and LDAPS, you can use groups from your directory service to set th
 * For LDAP users not belonging to a group:
 ** Select a {product-title_short} group from the *Default Group for Users* list. This default group can be used for all LDAP users who use LDAP for authentication only. Do not select *Get User Groups from LDAP*, which will hide the *Default Group for Users* option.
 * For LDAP users belonging to a group:
-** Check *Get User Groups from LDAP* to retrieve the user's group membership from LDAP. This is used for mapping a user's authorization to a {product-title_short} role. This requires group names on the LDAP server to match {product-title_short} group names.
+** Check *Get User Groups from LDAP* to retrieve the user's group membership from LDAP. This looks up all groups in the directory server for the user attempting to log in. This group list is matched against the available groups configured in {product-title_short}. Once a match is found, the role associated with the matching group identifies the authority the user will have on {product-title_short}. This requires group names on the directory server to match {product-title_short} group names. Checking this box enables user records to be automatically created in {product-title_short} when a user logs in.
 +
 [IMPORTANT]
 ====
 If you do not check *Get User Groups from LDAP*, the user must be defined in the VMDB using the console where the User ID is the same as the user's name in your directory service typed in lowercase.
 ====
-** Check *Get Roles from Home Forest* to use the LDAP roles from the LDAP user's home forest. This will allow you to discover groups on your LDAP server and create {product-title_short} groups based on your LDAP server's group names. Any user logging in will be assigned to that group. This option is only displayed when *Get User Groups from LDAP* is checked.
+** Check *Get Groups from Home Forest* to use the LDAP groups from the LDAP user's home forest. This will allow you to discover groups on your directory server and create {product-title_short} groups based on your directory server's group names. Any user logging in will be assigned to that group. This option is only displayed when *Get User Groups from LDAP* is checked.
++
+[NOTE]
+====
+In most environments, it is recommended to check both the *Get User Groups from LDAP* and *Get Groups from Home Forest* options.
+====
++
 ** Check *Follow Referrals* to look up and bind a user that exists in a domain other than the one configured in the LDAP authentication settings.
-** Specify the user name to bind to the LDAP server in *Bind DN*. This user must have read access to all users and groups that will be used for {product-title_short} authentication and role assignment, for example, a service account user with access to all LDAP users (named _svc-ldap_ in this example).
+** Specify the user name to bind to the directory server in *Bind DN*. This user must have read access to all users and groups that will be used for {product-title_short} authentication and role assignment, for example, a service account user with access to all LDAP users (named _svc-ldap_ in this example).
 ** Enter the password for the Bind DN user in *Bind Password*.
 +
 . Click *Validate* to verify your settings.
@@ -99,19 +104,19 @@ After adding other trusted LDAP forests, you can then change the order in which 
 [[assigning_account_roles_using_ldap_groups]]
 == Assigning {product-title_short} Account Roles Using LDAP Groups
 
-After configuring LDAP authentication as described in xref:ldap_settings[], you can associate {product-title_short} account roles with your LDAP users. The LDAP server defines the groups and users for {product-title_short}, while {product-title_short} defines the account roles, and maps the roles to the privileges the LDAP user has.
+After configuring LDAP authentication as described in xref:ldap_settings[], you can associate {product-title_short} account roles with your LDAP users. The LDAP directory server defines the groups and users for {product-title_short}, while {product-title_short} defines the account roles, and maps the roles to the privileges the LDAP user has.
 
 There are two ways to associate your LDAP groups with {product-title_short} account roles:
 
 * Create groups in {product-title_short} that match your existing LDAP groups by name, and assign the groups account roles; or
-* Create groups on your LDAP server based on the default account roles in {product-title_short}.
+* Create groups on your directory server based on the default account roles in {product-title_short}.
 
 The users in your LDAP groups then inherit the {product-title_short} account roles for the LDAP group(s) they are in.
 
 The authentication process then happens as such:
 
-. _LDAPuser1_ attempts to log into {product-title_short}, so {product-title_short} queries the LDAP server to verify it knows _LDAPuser1_.
-. The LDAP server then confirms that it knows _LDAPuser1_, and provides information about the LDAP groups _LDAPuser1_ belongs to: _Group1_.
+. _LDAPuser1_ attempts to log into {product-title_short}, so {product-title_short} queries the directory server to verify it knows _LDAPuser1_.
+. The directory server then confirms that it knows _LDAPuser1_, and provides information about the LDAP groups _LDAPuser1_ belongs to: _Group1_.
 . {product-title_short} then looks up _Group1_, and discovers that _Group1_ is associated with _Role1_.
 . {product-title_short} then associates _LDAPuser1_ with _Group1_ in {product-title_short}, and then allows the user to perform tasks allowable by that role.
 
@@ -148,7 +153,7 @@ To configure the LDAP group lookup priority, see xref:ldap_lookup_priority[].
 
 === Creating LDAP Groups Based on {product-title_short} Account Roles
 
-You can also configure access control for LDAP users by creating groups on your LDAP server based on {product-title_short} user account roles.
+You can also configure access control for LDAP users by creating groups on your directory server based on {product-title_short} user account roles.
 
 Your LDAP group names must match the account role names in {product-title_short}. The LDAP users in that group are then automatically assigned to that specific account role.
 
