--- a/doc-V2V_Guide/cfme/doc/modules/ref_Discovery_questions.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/ref_Discovery_questions.adoc
@@ -14,7 +14,7 @@ For a list of supported guest operating systems, see link:https://access.redhat.
 +
 [NOTE]
 ====
-Although it is possible to migrate guest operating systems that are not certified for RHV, running the guest is "best effort".
+Although it is possible to migrate guest operating systems that are not certified for RHV, running these guests is not officially supported.
 ====
 
 What resources will my target environment require?::
