Max concurrent migrations section, QA updates

--- a/doc-V2V_Guide/cfme/doc/modules/con_Troubleshooting.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Troubleshooting.adoc
@@ -35,6 +35,7 @@ If a migration plan does not complete successfully, check the logs for errors:
 
 * CloudForms migration log: `/var/www/miq/vmdb/log/automation.log`
 * Conversion host logs: `/tmp`
+* Virtual machine migration log: You can download the migration log for each virtual machine by clicking the migration plan to go to the migration plan details, and clicking `Download Log`.
 
 [discrete]
 == Common Issues and Mistakes
