--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
@@ -1,7 +1,7 @@
 [id="Configuring_rhv_conversion_hosts_for_ssh_transformation"]
 = Configuring RHV Conversion Hosts for SSH Transformation
 
-Configure the RHV conversion hosts to communicate with the VMware hypervisors using the public key authentication mechanism:
+If you are using the SSH transformation mode, configure the RHV conversion hosts to communicate with the VMware hypervisors using public key authentication:
 
 . Enable SSH on all the VMware hypervisors. See link:https://pubs.vmware.com/vsphere-6-5/index.jsp?topic=%2Fcom.vmware.vcli.getstart.doc%2FGUID-C3A44A30-EEA5-4359-A248-D13927A94CCE.html[Enable SSH from the vSphere Web Client] for details.
 
