--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_CloudForms.adoc
@@ -1,7 +1,7 @@
-[id="Configuring_rhv_conversion_hosts"]
-= Configuring RHV Conversion Hosts
+[id="Configuring_rhv_conversion_hosts_in_CloudForms"]
+= Configuring RHV Conversion Hosts in CloudForms
 
-Configure the RHV conversion hosts in CloudForms:
+You must configure the RHV conversion hosts in CloudForms:
 
 . Go to menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization Host.
 . Click the `Policy` drop-down button and select `Edit Tags`.
