--- a/doc-V2V_Guide/cfme/master.adoc
+++ b/doc-V2V_Guide/cfme/master.adoc
@@ -27,7 +27,7 @@ The infrastructure migration process has 4 key phases:
 
 * Installation:
 ** Installing and configuring Red Hat Virtualization, Red Hat Virtualization Host, and Red Hat CloudForms
-** Creating and configuring RHV conversion hosts
+** Creating and configuring the RHV conversion hosts and configuring the maximum number of concurrent migrations.
 
 * Discovery and Assessment:
 ** Discovering and assessing your environment
