--- a/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
@@ -1,13 +1,16 @@
 [id="Installation"]
 = Installation
 
-The installation phase includes the following requirements:
+The installation phase requires the following stages:
 
-* Prerequisites: Installing and configuring of the Red Hat environment
-* Creating RHV conversion hosts
-* Configuring RHV conversion hosts
+* Prerequisites: Installing and configuring the Red Hat environment
+* Creating the RHV conversion hosts
+* Configuring the RHV conversion hosts
+
+xref:Configuring_the_maximum_number_of_concurrent_migrations[Configuring the maximum number of concurrent migrations] is optional.
 
 include::modules/con_Prerequisites.adoc[leveloffset=+1]
 include::modules/proc_Creating_rhv_conversion_hosts.adoc[leveloffset=+1]
-include::modules/proc_Configuring_rhv_conversion_hosts.adoc[leveloffset=+1]
+include::modules/proc_Configuring_rhv_conversion_hosts_in_CloudForms.adoc[leveloffset=+1]
 include::modules/proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc[leveloffset=+1]
+include::modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
