--- a/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -32,10 +32,15 @@ MAC address pools::
 The MAC address pools defined for the target RHV cluster must include the MAC addresses of the source virtual machines. See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-MAC_Address_Pools[MAC Address Pools] in the _Red Hat Virtualization Administration Guide_.
 
 Data and ISO storage domains attached to the RHV data center::
-See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_NFS_Storage[Preparing and Adding NFS Storage] and  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Attaching_an_iso_domain[Attaching an Existing ISO domain to a Data Center] in the _Red Hat Virtualization Administration Guide_.
+See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_NFS_Storage[Preparing and Adding NFS Storage] in the _Red Hat Virtualization Administration Guide_.
 
 VirtIO and Guest Tool images uploaded to the ISO storage domain::
 See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[Uploading the VirtIO and Guest Tool Image Files to an ISO Storage Domain] in the _Red Hat Virtualization Administration Guide_.
++
+[NOTE]
+====
+The VirtIO image file name must include the version number: virtio-win-_version_.iso.
+====
 
 Red Hat CloudForms 4.6.4 or later installed::
 See  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/installing_red_hat_cloudforms_on_red_hat_virtualization/[Installing Red Hat CloudForms on Red Hat Virtualization] for installation instructions.
@@ -47,4 +52,4 @@ RHV hosts authenticated::
 See  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[Authenticating Red Hat Virtualization Hosts] in _Managing Providers_.
 
 RHV conversion hosts created and configured::
-See xref:proc_Creating_rhv_conversion_hosts[Creating RHV Conversion Hosts] and xref:Configuring_rhv_conversion_hosts[Configuring RHV Conversion Hosts] below.
+See xref:proc_Creating_rhv_conversion_hosts[Creating RHV Conversion Hosts], xref:Configuring_rhv_conversion_hosts_in_CloudForms[Configuring RHV Conversion Hosts in CloudForms], and xref:Configuring_rhv_conversion_hosts_for_ssh_transformation[Configuring RHV Conversion Hosts for SSH Transformation] below.
