VM migration log in Troubleshooting

--- a/doc-V2V_Guide/cfme/doc/modules/con_Troubleshooting.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Troubleshooting.adoc
@@ -31,11 +31,11 @@ If one or more virtual machines in a migration plan fails to migrate, the plan's
 [discrete]
 == Log Files
 
-If a migration plan does not complete successfully, check the logs for errors:
+If a migration plan does not complete successfully, you can check the logs for errors:
 
 * CloudForms migration log: `/var/www/miq/vmdb/log/automation.log`
 * Conversion host logs: `/tmp`
-* Virtual machine migration log: You can download the migration log for each virtual machine by clicking the migration plan to go to the migration plan details, and clicking `Download Log`.
+* Virtual machine migration log: Click the migration plan to go to the details page and click `Download Log`.
 
 [discrete]
 == Common Issues and Mistakes
