Added a procedure on discovering OpenStack infrastructure providers. Also made a few edits to related procedures on discovering infrastructure providers.

--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -54,6 +54,9 @@ Enable an OpenStack Infrastructure provider by adding it to the appliance.
 :leveloffset: 3
 include::Adding_an_OpenStack_Infrastructure_Provider.adoc[]
 
+:leveloffset: 3
+include::common/openstack/discovering-openstack-infrastructure-providers.adoc[]
+
 :leveloffset: 2
 = VMware vCenter Providers
 
