--- a/doc-Managing_Providers/topics/Discovering_Multiple_Management_Systems.adoc
+++ b/doc-Managing_Providers/topics/Discovering_Multiple_Management_Systems.adoc
@@ -1,15 +1,12 @@
 [[_discovering_multiple_management_systems]]
 = Discovering Infrastructure Providers
 
-In addition to individually adding providers, you can also discover all infrastructure providers in a given subnet range.
+In addition to individually adding providers, you can also discover infrastructure providers in a given subnet range.
 
 . Navigate to menu:Compute[Infrastructure > Providers].
 . Click  image:1847.png[Configuration] (*Configuration*), then click  image:1942.png[Discover Infrastructure Providers] (*Discover Infrastructure Providers*). 
-. Select the types of provider to discover.
-. Enter a *Subnet Range* of IP addresses starting with a *From Address* and ending with a *To Address*. The cursor automatically advances as you complete each octet.
+. Select the infrastructure provider to discover.
+. Provide a *Subnet Range*. Enter the *From Address* and *To Address* of the address range.
 . Click *Start*.
 
-The appliance searches for all infrastructure providers in the specified subnet range, and adds them to the user interface. However, before you can manage the providers added via discovery, you must edit each provider and specify authentication details.
-
-
-
+The appliance searches for all infrastructure providers in the specified subnet range, and adds them to the user interface. However, before you can manage providers added via discovery, you must edit each provider and specify authentication details.
