--- a/doc-Managing_Providers/topics/Discovering_Physical_Infra_Providers.adoc
+++ b/doc-Managing_Providers/topics/Discovering_Physical_Infra_Providers.adoc
@@ -1,15 +1,14 @@
 [[_discovering_physical_infra_providers_]]
 = Discovering Physical Infrastucture Providers
 
-In addition to discovering virtual infrastructure providers, {product-title_short} now has the ability to discover physical infrastructure providers in a given subnet range.
+In addition to discovering virtual infrastructure providers, {product-title_short} has the ability to discover physical infrastructure providers in a given subnet range.
 
 . Navigate to menu:Compute[Physical Infrastructure > Providers].
 . Click  image:1847.png[Configuration] (*Configuration*), then click image:1942.png[Discover Physical Infrastructure Providers] (*Discover Physical Infrastructure Providers*). 
 . Select the provider in *Discovery Type*.
-. Enter a *Subnet Range* of IP addresses starting with a *From Address* and ending with a *To Address*.
+. Provide a *Subnet Range*. Enter the *From Address* and *To Address* of the address range.
 . Enter a *Port*.
 . Click *Start*.
 
 The appliance searches for all physical infrastructure providers in the specified subnet range, and adds them to the user interface. However, before you can manage providers added via discovery feature, you must edit each provider to enter authentication details.
-
 
