applied peer review changes

--- a/doc-Installing_on_SCVMM/topics/installation.adoc
+++ b/doc-Installing_on_SCVMM/topics/installation.adoc
@@ -10,6 +10,18 @@ Installing {product-title} consists of the following steps:
 
 After you have completed all the procedures in this guide, you will have a working environment on which you can perform additional customizations and configurations.
 
+.Requirements
+
+Uploading the {product-title_short} appliance file to SCVMM requires:
+
+* A Microsoft System Center Virtual Machine Manager environment with at least one Hyper-V node.
+* 44 GB of storage space.
+* 12 GB RAM.
+* 4 vCPUs.
+
+
+
+
 ifdef::miq[]
 [[obtaining-the-appliance]]
 === Obtaining the Appliance
