applied peer review changes

--- a/doc-Installing_on_SCVMM/topics/installation.adoc
+++ b/doc-Installing_on_SCVMM/topics/installation.adoc
@@ -18,6 +18,7 @@ Uploading the {product-title_short} appliance file to SCVMM requires:
 * 44 GB of storage space.
 * 12 GB RAM.
 * 4 vCPUs.
+* An Admin privileged account for the SCVMM environment
 
 
 
@@ -120,9 +121,9 @@ $HWProfile `
 Remove-HardwareProfile -HardwareProfile $templateName
 ----
 +
-. Deploy a virtual machine to a host group from the created template by running a script using PowerShell.
+. Deploy a virtual machine to a host group from the created template.
 +
-Run the following script using PowerShell, substituting values for your environment:
+Run the following PowerShell script, substituting values for your environment:
 +
 ----
 $tpl = Get-SCVMTemplate -Name $templateName -VMMServer $scvmmServer
