--- a/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -6,11 +6,14 @@ Before migration, your environment must have the following prerequisites:
 Target datastore size::
 The target datastore must have sufficient space for the virtual machines that will be migrated.
 
+BIOS settings of hosts::
+The BIOS settings of the hosts should be set for optimal performance, rather than power-saving, according to the vendor's recommendations. Where applicable, the C1E halt state should be disabled.
+
 Red Hat Virtualization Manager 4.2.4 or later installed::
 See the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html/planning_and_prerequisites_guide/[Red Hat Virtualization Planning and Prerequisites Guide] and link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#part-Installing_the_Red_Hat_Virtualization_Manager[Installing the Red Hat Virtualization Manager] in the _Red Hat Virtualization Installation Guide_.
 
-Red Hat Virtualization Hosts 4.2.4 or later installed::
-See  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#Installing_RHVH[Installing Red Hat Virtualization Host] in the _Red Hat Virtualization Installation Guide_.
+Red Hat Virtualization Hosts 4.2.4 or RHEL 7.5 hosts or later installed::
+See  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#Installing_RHVH[Installing Red Hat Virtualization Host] or link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#Red_Hat_Enterprise_Linux_Hosts[Installing Red Hat Enterprise Linux Hosts] in the _Red Hat Virtualization Installation Guide_.
 
 Network::
 The VMware network must be extended to the RHV environment.
@@ -46,10 +49,10 @@ Red Hat CloudForms 4.6.4 or later installed::
 See  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/installing_red_hat_cloudforms_on_red_hat_virtualization/[Installing Red Hat CloudForms on Red Hat Virtualization] for installation instructions.
 
 VMware and RHV environments added to CloudForms::
-See   link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#vmware_vcenter_providers[VMware vCenter Providers] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#red_hat_virtualization_providers[Red Hat Virtualization Providers] in _Managing Providers_.
+See   link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#vmware_vcenter_providers[VMware vCenter Providers] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#red_hat_virtualization_providers[Red Hat Virtualization Providers] in _CloudForms: Managing Providers_.
 
 RHV hosts authenticated::
-See  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[Authenticating Red Hat Virtualization Hosts] in _Managing Providers_.
+See  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[Authenticating Red Hat Virtualization Hosts] in _CloudForms: Managing Providers_.
 
 RHV conversion hosts created and configured::
 See xref:proc_Creating_rhv_conversion_hosts[Creating RHV Conversion Hosts], xref:Configuring_rhv_conversion_hosts_in_CloudForms[Configuring RHV Conversion Hosts in CloudForms], and xref:Configuring_rhv_conversion_hosts_for_ssh_transformation[Configuring RHV Conversion Hosts for SSH Transformation] below.
