--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_CloudForms.adoc
@@ -7,6 +7,12 @@ You must configure the RHV conversion hosts in CloudForms:
 . Click the `Policy` drop-down button and select `Edit Tags`.
 . Select `V2V - Transformation Host` from the tag drop-down list and `t` as the assigned value.
 . Select `V2V - Transformation Method` from the tag drop-down list and either `VDDK` or `SSH` as the assigned value.
++
+[NOTE]
+====
+VDDK is approximately twice as fast as SSH.
+====
+
 . Click `Save`.
 . Select the same host, click the `Configuration` drop-down button, and select `Edit this item`.
 . In the `Default` tab of the Endpoints section, enter the `Username` *root* and the password.
