SME changes, screenshots

--- a/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
@@ -4,8 +4,8 @@
 The installation phase requires the following stages:
 
 * Prerequisites: Installing and configuring the Red Hat environment
-* Creating the RHV conversion hosts
-* Configuring the RHV conversion hosts
+* Creating the RHV conversion host(s)
+* Configuring the RHV conversion host(s)
 
 xref:Configuring_the_maximum_number_of_concurrent_migrations[Configuring the maximum number of concurrent migrations] is optional.
 
