--- a/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -7,7 +7,7 @@ Target datastore size::
 The target datastore must have sufficient space for the virtual machines that will be migrated.
 
 BIOS settings of hosts::
-The BIOS settings of the hosts should be set for optimal performance, rather than power-saving, according to the vendor's recommendations. Where applicable, the C1E halt state should be disabled.
+The BIOS settings of the physical hosts should be set for optimal performance, rather than power-saving, according to the vendor's recommendations. Where applicable, the C1E halt state should be disabled.
 
 Red Hat Virtualization Manager 4.2.4 or later installed::
 See the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html/planning_and_prerequisites_guide/[Red Hat Virtualization Planning and Prerequisites Guide] and link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#part-Installing_the_Red_Hat_Virtualization_Manager[Installing the Red Hat Virtualization Manager] in the _Red Hat Virtualization Installation Guide_.
@@ -19,7 +19,7 @@ Network::
 The VMware network must be extended to the RHV environment.
 [IMPORTANT]
 ====
-The network configuration must not be changed in any way during the migration. IP addresses, VLANs, and other network configurations must be the same, before and after migration.
+The network configuration must not be changed in any way during the migration. IP addresses, VLANs, and other network configurations must be the same, before and after migration, because the conversion process preserves the source virtual machine MAC addresses.
 ====
 
 Ports::
