--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -1,7 +1,9 @@
 [[Creating_an_Infrastructure_Mapping]]
 = Creating an Infrastructure Mapping
 
-Create an infrastructure mapping to map your VMware resources to Red Hat Virtualization resources:
+In CloudForms, create an infrastructure mapping to map your VMware resources to RHV resources:
+
+image:Compute_Manage_UI.png[]
 
 . Go to menu:Compute[Migration] and click *Create Infrastructure Mapping*.
 . Enter the name of your mapping and click *Next*.
@@ -24,5 +26,7 @@ Create an infrastructure mapping to map your VMware resources to Red Hat Virtual
 . If a successful mapping message is displayed, click *Close*.
 +
 Your infrastructure mapping is displayed in menu:Compute[Migration].
++
+image:infrastructure_mapping_created.png[]
 
 After creating an infrastructure mapping, create a migration plan.
