--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -38,6 +38,8 @@ If you are migrating a small number of virtual machines, you can use the migrati
 
 .. Select *Choose from a list of VMs discovered in the selected infrastructure mapping*.
 .. Click *Next*.
++
+image:Discover_VMs.png[]
 
 * If you are importing a CSV file:
 
@@ -47,7 +49,9 @@ If you are migrating a small number of virtual machines, you can use the migrati
 
 . Select the virtual machines to migrate and click *Next*.
 +
-You can select Ansible playbook services to run on the virtual machines in the migration plan before or after the migration. See xref:Option_Pre_and_Post_Migration_Tasks_with_Ansible[Advanced Migration Option: Automating Pre- and Post-Migration Tasks with Ansible].
+image:Advanced_Options.png[]
++
+Optionally, you can select Ansible playbook services to run on the virtual machines in the migration plan before or after the migration. See xref:Option_Pre_and_Post_Migration_Tasks_with_Ansible[Advanced Migration Option: Automating Pre- and Post-Migration Tasks with Ansible] below.
 
 . Select *Start Migration Immediately* and click *Create*.
 
