--- a/doc-V2V_Guide/cfme/doc/modules/ref_Discovery_questions.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/ref_Discovery_questions.adoc
@@ -6,8 +6,10 @@ The following questions will guide you through the discovery process:
 What am I migrating?::
 Identify the hosts and virtual machines to be migrated. If your deployment is large and complex, you may want to divide your resources into migration groups.
 
-What is the maximum number of resources that I can migrate?::
-There is no maximum number of disks or virtual machines that you can migrate. However, you may not want to migrate all your virtual machines at the same time, in order to minimize the impact on your users. The maximum number of NICs that you can migrate is 4.
+What is the maximum number of virtual machines that I can migrate?::
+There is no maximum number of disks or virtual machines that you can migrate. However, you may not want to migrate all your virtual machines at the same time, in order to minimize the impact on your users. The maximum number of NICs per virtual machine that you can migrate is 4.
++
+If you exceed the capabilities of the environment, the migrations will fail and may negatively affect existing applications running on virtual machines attached to the network and storage. Plan carefully and perform test migrations to determine the capabilities of your environment.
 
 What operating systems can I migrate?::
 For a list of supported guest operating systems, see link:https://access.redhat.com/articles/1351473[Converting Virtual Machines from Other Hypervisors to KVM with virt-v2v in RHEL 7]. For a list of certified guest operating systems, see link:https://access.redhat.com/articles/973163[Certified Guest Operating Systems in Red Hat OpenStack Platform and Red Hat Enterprise Virtualization].
