--- a/doc-V2V_Guide/cfme/common/attributes/cfme.adoc
+++ b/doc-V2V_Guide/cfme/common/attributes/cfme.adoc
@@ -1,8 +1,7 @@
 
 :product-title: Red Hat Infrastructure Migration Solution
-:product-title_short: IMS
+:product-title_short: Infrastructure Migration Solution
 :product-title_short_l: IMS
 :product-title_abbr: IMS
 :product-title_abbr_uc: IMS
 :virt-product-title: Red Hat Infrastructure Migration Solution
-
