--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
@@ -1,7 +1,7 @@
 [id="proc_Creating_rhv_conversion_hosts"]
 = Creating RHV Conversion Hosts
 
-All the virtual machines that are specified in a migration plan are migrated at the same time. Therefore, the number of RHV conversion hosts that you create depends on the number of virtual machines you intend to migrate.
+All the virtual machines that are specified in a migration plan are migrated at the same time. Therefore, the number of RHV conversion hosts that you create depends on the number of virtual machines you intend to migrate. Red Hat recommends configuring the RHV conversion hosts on physical machines, not nested virtual machines.
 
 Each conversion host is limited to 10 concurrent migrations, unless you change the default value (see xref:Configuring_the_maximum_number_of_concurrent_migrations[] below). Multiple conversion hosts are recommended, even for smaller migrations, for load-balancing purposes.
 
@@ -9,6 +9,24 @@ Each conversion host is limited to 10 concurrent migrations, unless you change t
 ====
 The number of virtual machines that you can migrate at the same time depends on your infrastructure capabilities. Each migration requires a certain amount of network bandwidth, I/O throughput, and processing power for the conversion process. You should test your environment to understand how many migrations can occur simultaneously without negative effects.
 ====
+
+[[datapath_transformation_options_vddk_ssh]]
+[discrete]
+== Datapath Transformation Options: VDDK vs. SSH
+
+You must select the best datapath transformation option for your environment, either VDDK or SSH:
+
+VDDK::
+* Best performance and, therefore, recommended
+* Compiled with `nbdkit` to provide direct connectivity to the virtual machine disks
+* Requires downloading the VDDK package
+* Requires a location for the conversion host configuration
+
+SSH::
+* Does not require additional downloads, packages, tools, or compilation
+* Requires the RHV and VMware environments to share SSH keys
+* Requires enabling SSH access on ESX hosts
+* Slower than VDDK
 
 Create one or more RHV conversion hosts:
 
@@ -33,8 +51,8 @@ all:
     _host2.example.com_:
   vars:
     ansible_ssh_private_key_file: /etc/pki/ovirt-engine/keys/engine_id_rsa
-    v2v_vddk_package_name=VMware-vix-disklib-_version_.x86_64.tar.gz
-    v2v_vddk_package_url=http://_Manager_FQDN_/VMware-vix-disklib-_version_.x86_64.tar.gz
+    v2v_vddk_package_name: VMware-vix-disklib-_version_.x86_64.tar.gz
+    v2v_vddk_package_url: http://_Manager_FQDN_/VMware-vix-disklib-_version_.x86_64.tar.gz
 ----
 
 . Enable the conversion hosts:
@@ -43,6 +61,12 @@ all:
 ----
 # ansible-playbook -i conversion_hosts_inventory.yml conversion_host_enable.yml
 ----
++
+[NOTE]
+====
+The Ansible role checks for the presence of the RHV guest tools ISO image in the ISO storage domain. This image is used to migrate Windows virtual machines.
+====
+
 
 . Verify that the conversion hosts are enabled:
 +
