--- a/doc-V2V_Guide/cfme/master.adoc
+++ b/doc-V2V_Guide/cfme/master.adoc
@@ -26,8 +26,8 @@ The infrastructure migration is performed with Red Hat CloudForms. CloudForms is
 The infrastructure migration process has 4 key phases:
 
 * Installation:
-** Installing and configuring Red Hat Virtualization, Red Hat Virtualization Host, and Red Hat CloudForms
-** Creating and configuring the RHV conversion hosts and configuring the maximum number of concurrent migrations.
+** Installing and configuring Red Hat Virtualization, Red Hat Virtualization Host(s) or Red Hat Enterprise Linux host(s), and Red Hat CloudForms
+** Creating and configuring the RHV conversion host{s} and configuring the maximum number of concurrent migrations.
 
 * Discovery and Assessment:
 ** Discovering and assessing your environment
