--- a/doc-V2V_Guide/cfme/doc/modules/con_Migration_overview.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Migration_overview.adoc
@@ -3,6 +3,7 @@
 
 The diagram below provides a high-level view of the infrastructure migration workflow. An understanding of this workflow will greatly simplify troubleshooting.
 
+.Migration Workflow
 image:migration_workflow.png[]
 
 . The Infrastructure Admin creates an infrastructure mapping and a virtual machine migration plan in CloudForms and runs the migration plan.
