--- a/doc-V2V_Guide/cfme/doc/modules/con_Troubleshooting.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Troubleshooting.adoc
@@ -9,7 +9,7 @@ You can remigrate previously migrated virtual machines:
 
 . Delete the target virtual machines corresponding to the source virtual machines that you are remigrating. Otherwise, the remigration will fail because a target machine with the same name already exists.
 . Delete the disks belonging to these virtual machines, which were created in the target datastore during the earlier migration, to free up space.
-. Create a xref:CSV_file[CSV file] with the names and, optionally, providers, of the source virtual machines.
+. Create a xref:CSV_file[CSV file] with the names and, optionally, the providers, of the source virtual machines.
 +
 [NOTE]
 ====
@@ -37,6 +37,7 @@ If a migration plan does not complete successfully, you can check the logs for e
 * Conversion host logs: `/var/log/vdsm/import/`
 * Virtual machine migration log: Go to menu:Compute[Migrate], click the migration plan to go to the details page, and click `Download Log`.
 +
+.Migrated Virtual Machine Logs
 image:Migrated_VM_details.png[]
 
 [discrete]
