--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_CloudForms.adoc
@@ -18,4 +18,7 @@ VDDK is approximately twice as fast as SSH.
 . In the `Default` tab of the Endpoints section, enter the `Username` *root* and the password.
 . Click `Validate`. If a success message is displayed, click `Save`.
 
+.Conversion Host Properties
+image:Conversion_host_properties.png
+
 If you are using `VDDK` transformation, go to xref:Discovery_and_Assessment[]. If you are using `SSH` transformation, go to xref:Configuring_rhv_conversion_hosts_for_ssh_transformation[].
