--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -1,9 +1,10 @@
 [[Creating_an_Infrastructure_Mapping]]
 = Creating an Infrastructure Mapping
 
-In CloudForms, create an infrastructure mapping to map your VMware resources to RHV resources:
-
+.Migration Screen
 image:Compute_Manage_UI.png[]
+
+In CloudForms, create an infrastructure mapping to map your VMware resources to RHV resources:
 
 . Go to menu:Compute[Migration] and click *Create Infrastructure Mapping*.
 . Enter the name of your mapping and click *Next*.
