--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -37,9 +37,11 @@ If you are migrating a small number of virtual machines, you can use the migrati
 * If you are using the migration plan to discover the virtual machines automatically:
 
 .. Select *Choose from a list of VMs discovered in the selected infrastructure mapping*.
-.. Click *Next*.
 +
+.Discovered Virtual Machines
 image:Discover_VMs.png[]
+
+.. Click *Next*.
 
 * If you are importing a CSV file:
 
@@ -47,11 +49,12 @@ image:Discover_VMs.png[]
 .. Select *Import a CSV file with a list of VMs to be migrated* and click *Next*.
 .. Click *Import*, browse to the CSV file, and click *Open*.
 
-. Select the virtual machines to migrate and click *Next*.
+. Select the virtual machines to migrate and click *Next* to go to *Advanced Options*.
 +
+.Advanced Options
 image:Advanced_Options.png[]
 +
-Optionally, you can select Ansible playbook services to run on the virtual machines in the migration plan before or after the migration. See xref:Option_Pre_and_Post_Migration_Tasks_with_Ansible[Advanced Migration Option: Automating Pre- and Post-Migration Tasks with Ansible] below.
+You have the option to select Ansible playbook services to run on the virtual machines in the migration plan before or after the migration. See xref:Option_Pre_and_Post_Migration_Tasks_with_Ansible[Advanced Migration Option: Automating Pre- and Post-Migration Tasks with Ansible] below.
 
 . Select *Start Migration Immediately* and click *Create*.
 
