--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_CloudForms.adoc
@@ -19,6 +19,6 @@ VDDK is approximately twice as fast as SSH.
 . Click `Validate`. If a success message is displayed, click `Save`.
 
 .Conversion Host Properties
-image:Conversion_host_properties.png
+image:Conversion_host_properties.png[]
 
-If you are using `VDDK` transformation, go to xref:Discovery_and_Assessment[]. If you are using `SSH` transformation, go to xref:Configuring_rhv_conversion_hosts_for_ssh_transformation[].
+If you are using `SSH` transformation, you must perform the additional configuration in    xref:Configuring_rhv_conversion_hosts_for_ssh_transformation[].
