--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
@@ -12,7 +12,7 @@ The number of virtual machines that you can migrate at the same time depends on 
 
 [[datapath_transformation_options_vddk_ssh]]
 [discrete]
-== Datapath Transformation Options: VDDK vs. SSH
+== Datapath Transformation Options: VDDK or SSH
 
 You must select the best datapath transformation option for your environment, either VDDK or SSH:
 
@@ -28,9 +28,12 @@ SSH::
 * Requires enabling SSH access on ESX hosts
 * Slower than VDDK
 
+[discrete]
+== Procedure
+
 Create one or more RHV conversion hosts:
 
-. Log in to the link:https://www.vmware.com/support/developer/vddk/[VMware VDDK Documentation] site and download the latest VDDK package (for example, `VMware-vix-disklib-6.5.3-8315684.x86_64.tar.gz`) to your local machine.
+. Log in to the link:https://www.vmware.com/support/developer/vddk/[VMware VDDK Documentation] site and download the latest VDDK package (for example, `VMware-vix-disklib-6.5.3-8315684.x86_64.tar.gz`) to your local machine. The VDDK package is required for creating the conversion host, regardless of the transformation method.
 
 . Using SCP, copy the VDDK package to `/var/www/html` on the Manager machine.
 
@@ -66,7 +69,6 @@ all:
 ====
 The Ansible role checks for the presence of the RHV guest tools ISO image in the ISO storage domain. This image is used to migrate Windows virtual machines.
 ====
-
 
 . Verify that the conversion hosts are enabled:
 +
