--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -53,7 +53,7 @@ image:Discover_VMs.png[]
 .Advanced Options
 image:Advanced_Options.png[]
 +
-You have the option to select Ansible playbook services to run on the virtual machines in the migration plan before or after the migration. See xref:Option_Pre_and_Post_Migration_Tasks_with_Ansible[Advanced Migration Option: Automating Pre- and Post-Migration Tasks with Ansible] below.
+You can select Ansible playbook services to run on the virtual machines in the migration plan before or after the migration. See xref:Option_Pre_and_Post_Migration_Tasks_with_Ansible[Advanced Migration Option: Automating Pre- and Post-Migration Tasks with Ansible] below.
 
 . Select *Start Migration Immediately* and click *Create*.
 
