--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Troubleshooting.adoc
@@ -59,4 +59,4 @@ Migration fails at virtual machine conversion::
 If a migration fails when the virtual machines are being converted (the progress bar updates), click the migration plan to go to the details page and download the conversion log for the the virtual machine(s) that failed to migrate.
 
 SSH transformation fails::
-If you are using SSSD with single-sign-on for RHV, SSH fails for the vdsm account. See  link:https://bugzilla.redhat.com/show_bug.cgi?id=1544379[] for details.
+If you are using SSSD with single sign-on for RHV, SSH fails for the `vdsm` account. See  link:https://bugzilla.redhat.com/show_bug.cgi?id=1544379[] for details.
