--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
@@ -5,7 +5,7 @@ If you are using the SSH transformation mode, configure the RHV conversion hosts
 
 . Enable SSH on all the VMware hypervisors. See link:https://pubs.vmware.com/vsphere-6-5/index.jsp?topic=%2Fcom.vmware.vcli.getstart.doc%2FGUID-C3A44A30-EEA5-4359-A248-D13927A94CCE.html[Enable SSH from the vSphere Web Client] for details.
 
-. If you created the conversion hosts without using the `ovirt-ansible-v2v-conversion-host` role, you must create the key pairs on each conversion host for the vdsm user:
+. If you created the conversion hosts without using the `ovirt-ansible-v2v-conversion-host` role, you must create the key pairs on each conversion host for the `vdsm` user:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
