--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Troubleshooting.adoc
@@ -61,7 +61,7 @@ If a migration fails when the virtual machines are being converted (the progress
 SSH transformation fails::
 If you are using SSSD with single sign-on for RHV, SSH fails for the `vdsm` account.
 +
-Reinstall the `ipa-client` without configuring the OpenSSH client:
+Reinstall `ipa-client` without configuring the OpenSSH client:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
