Added link in SSH config pointing to Troubleshooting

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Troubleshooting.adoc
@@ -58,6 +58,7 @@ If a migration fails immediately, before the progress bar is displayed, this is 
 Migration fails at virtual machine conversion::
 If a migration fails when the virtual machines are being converted (the progress bar updates), click the migration plan to go to the details page and download the conversion log for the the virtual machine(s) that failed to migrate.
 
+[[SSH_transformation_fails]]
 SSH transformation fails::
 If you are using SSSD with single sign-on for RHV, SSH fails for the `vdsm` account.
 +
