--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
@@ -41,3 +41,8 @@ echo Agent pid 65905;
 ----
 +
 If the connection is successful, the RHV conversion host is correctly configured for SSH transformation. Go to xref:Discovery_and_Assessment[].
+
+[NOTE]
+====
+If you are using SSSD with single sign-on, see xref:SSH_transformation_fails[Troubleshooting] for additional information.
+====
