VDDK limited to 10 concurrent migrations

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Installation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Installation.adoc
@@ -7,7 +7,7 @@ The installation phase requires the following stages:
 * Creating the RHV conversion host(s)
 * Configuring the RHV conversion host(s)
 
-xref:Configuring_the_maximum_number_of_concurrent_migrations[Configuring the maximum number of concurrent migrations] is optional.
+xref:Configuring_the_maximum_number_of_concurrent_migrations[Configuring the maximum number of concurrent migrations] is optional for SSH transformation.
 
 include::modules/con_Prerequisites.adoc[leveloffset=+1]
 include::modules/proc_Creating_rhv_conversion_hosts.adoc[leveloffset=+1]
