--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
@@ -3,7 +3,9 @@
 
 All the virtual machines that are specified in a migration plan are migrated at the same time. Therefore, the number of RHV conversion hosts that you create depends on the number of virtual machines you intend to migrate. Red Hat recommends configuring the RHV conversion hosts on physical machines, not nested virtual machines.
 
-Each conversion host is limited to 10 concurrent migrations, unless you change the default value (see xref:Configuring_the_maximum_number_of_concurrent_migrations[] below). Multiple conversion hosts are recommended, even for smaller migrations, for load-balancing purposes.
+Each conversion host is limited to 10 concurrent migrations, unless you change the default value (see xref:Configuring_the_maximum_number_of_concurrent_migrations[] below). Changing the default value is only supported for SSH transformation, not for VDDK. VDDK transformation is limited to 10 concurrent migrations.
+
+Multiple conversion hosts are recommended, even for small migrations, for load-balancing purposes.
 
 [NOTE]
 ====
